--- a/environment.yml
+++ b/environment.yml
@@ -13,8 +13,8 @@ dependencies:
   - pip:
     - better-exceptions
     - sacred
-    - sphinx
-    - sphinx-autodoc-typehints
-    - sphinx-rtd-theme
+    - sphinx==1.8.1
+    - sphinx-autodoc-typehints==1.3.0
+    - sphinx-rtd-theme==0.4.1
 prefix: /home/user/anaconda3/envs/tf_crnn
 
