--- a/config.json
+++ b/config.json
@@ -1,16 +1,20 @@
 {
-  "lookup_alphabet_file" : "./data/alphabet/lookup.json",
-  "csv_files_train" : ".data//csv_experiments/lines_train_tf_format.csv",
-  "csv_files_eval" : ".data/csv_experiments/lines_validation1_tf_format.csv",
+  "lookup_alphabet_file" : "./data/iam/generated/generated_alphabet/iam_alphabet_lookup.json",
+  "csv_files_train" : "./data/iam/generated/generated_csv/lines_train.csv",
+  "csv_files_eval" : "./data/iam/generated/generated_csv/lines_validation1.csv",
   "output_model_dir" : "./output_model",
   "num_beam_paths" : 1,
-  "cnn_batch_norm" : [true, true, true, true, true],
+   "cnn_features_list" : [64, 128, 256, 512],
+  "cnn_kernel_size" : [3, 3, 3, 3],
+  "cnn_stride_size" : [[1, 1], [1, 1], [1, 1], [1, 1]],
+  "cnn_pool_size" : [[2, 2], [2, 2], [2, 1], [2, 1]],
+  "cnn_batch_norm" : [true, true, true, true],
   "max_chars_per_string" : 80,
   "n_epochs" : 200,
-  "train_batch_size" : 128,
-  "eval_batch_size" : 128,
-  "learning_rate": 1e-4,
-  "input_shape" : [128, 1400],
-  "rnn_units" : [256, 256, 256],
+  "train_batch_size" : 64,
+  "eval_batch_size" : 64,
+  "learning_rate": 1e-3,
+  "input_shape" : [64, 900],
+  "rnn_units" : [128, 128, 128, 128],
   "restore_model" : false
 }
